# zkbitcoin

./: .gitignore  Cargo.toml  DEVELOPER.md  Dockerfile  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: build-image.yml  rust.yml
circuit_example/: Makefile  circuit.circom  inputs.json  public_input.json
crates/zkbtc/: Cargo.toml
crates/zkbtc-admin/: Cargo.toml
crates/zkbtc-admin/src/: main.rs
crates/zkbtc-admin/src/cli/: mod.rs
crates/zkbtc-core/: Cargo.toml
crates/zkbtc-core/src/: bob_request.rs  constants.rs  lib.rs  mpc_sign_tx.rs
crates/zkbtc-core/src/committee/: node.rs  orchestrator.rs
crates/zkbtc/src/: main.rs
crates/zkbtc/src/cli/: mod.rs
docs/: bob_address.md  building-an-app.md  mpc.md  mpc_and_taproot.md  serialization.md  zkapp.md
examples/circuit/: Makefile  proof.json  proof_inputs.json  public_inputs.json  stateful.circom  stateless.circom
examples/committee/: committee-cfg.json  key-0.json  key-1.json  key-2.json  publickey-package.json
fixtures/: vk.json
src/: address_verifier.rs  alice_sign_tx.rs  bob_request.rs  capped_hashmap.rs  compliance.rs  constants.rs  frost.rs  json_rpc_stuff.rs  lib.rs  mpc_sign_tx.rs  plonk.rs  psbt.rs  snarkjs.rs  srs.rs  zkp.rs
src/committee/: mod.rs  node.rs  orchestrator.rs
src/utils/: version.rs
whitepaper/: index.md
zkBIPs/: zkBIP-001.md
zkbitcoin/: Cargo.toml
zkbitcoin-core/: Cargo.toml
zkbitcoin-core/src/committee/: node.rs  orchestrator.rs
zkbtc-core/src/: srs.rs
