[package]
name = "zkbitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
bitcoin = { version = "0.31.0", features = [
    "serde",
    "bitcoinconsensus",
], git = "https://github.com/mimoo/rust-bitcoin/", branch = "mimoo/fix_0_31" }
bitcoincore-rpc = "0.18"
clap = { version = "4.4.10", features = ["derive", "env"] }
env_logger = "0.10.1"
#frost-secp256k1 = "1.0.0-rc.0"
frost-secp256k1-tr = { git = "https://github.com/mimoo/frost", branch = "mimoo/fix5" }
hex = "0.4.3"
itertools = "0.12.0"
jsonrpsee = { version = "0.20.3", features = ["server"] }
jsonrpsee-core = "0.20.3"
jsonrpsee-http-server = "0.15.1"
jsonrpsee-types = "0.20.3"
num-bigint = "0.4.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = "0.11"
secp256k1 = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha3 = "0.10.8"
tempdir = "0.3.7"
tokio = { version = "1.34", features = ["rt", "rt-multi-thread", "macros"] }

[patch.crates-io]
# see docs/serialization.md on why we do this
bitcoin = { git = "https://github.com/mimoo/rust-bitcoin/", branch = "mimoo/fix_0_31" }
frost-core = { git = "https://github.com/mimoo/frost", branch = "mimoo/fix5" }
#frost-secp256k1 = { git = "https://github.com/mimoo/frost", branch = "mimoo/fix2" }
#frost-secp256k1-tr = { git = "https://github.com/mimoo/frost", branch = "mimoo/fix2" }
