[package]
name = "zkbitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
bitcoin = { version = "0.31.0", features = [
    "serde",
    "bitcoinconsensus",
], git = "https://github.com/mimoo/rust-bitcoin/", branch = "mimoo/fix_0_31" }
bitcoincore-rpc = "0.18"
clap = { version = "4.4.10", features = ["derive", "env"] }
env_logger = "0.10.1"
frost-secp256k1-tr = { git = "https://github.com/mimoo/frost", branch = "mimoo/fix5" }
futures = "0.3.30"
hex = "0.4.3"
home = "0.5.9"
itertools = "0.12.0"
jsonrpsee = { version = "0.21.0", features = ["server"] }
jsonrpsee-core = "0.21.0"
jsonrpsee-http-server = "0.15.1"
jsonrpsee-types = "0.21.0"
log = "0.4.20"
num-bigint = "0.4.4"
num-traits = "0.2.17"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.11", features = ["stream"] }
secp256k1 = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha3 = "0.10.8"
sha256 = "1.4.0"
tempdir = "0.3.7"
tokio = { version = "1.34", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "macros",
] }
tokio-stream = "0.1.14"
xml = "0.8.10"

[patch.crates-io]
# see docs/serialization.md
bitcoin = { git = "https://github.com/mimoo/rust-bitcoin/", branch = "mimoo/fix_0_31" }
# see docs/mpc_and_taproot.md
frost-core = { git = "https://github.com/mimoo/frost", branch = "mimoo/fix5" }
