[package]
name = "zkbtc-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitcoin = { version = "0.31.0", features = [
    "serde",
    "bitcoinconsensus",
], git = "https://github.com/mimoo/rust-bitcoin/", branch = "mimoo/fix_0_31" }
clap = { version = "4.4.10", features = ["derive", "env"] }
env_logger = "0.10.1"
hex = "0.4.3"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tempdir = "0.3.7"
tokio = { version = "1.34", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "macros",
] }
zkbitcoin-core = { path = "../zkbtc-core"}
